crates/plotnik-tests/tests/02-parser/recovery_validation/type_annotation_dotted.txt
Q = (a) @x :: My.Type
------------------ DIAGNOSTICS -------------------
error: capture type names cannot contain punctuation or custom-name separators
 --> query.ptk:1:15
  |
1 | Q = (a) @x :: My.Type
  |               ^^^^^^^
  |
help: use `::MyType`
  |
1 - Q = (a) @x :: My.Type
1 + Q = (a) @x :: MyType
  |
